crates/lean-rs/tests/compile_fail/exported_unchecked_requires_unsafe.stderr
error[E0133]: call to unsafe function `module::exported::<impl LeanModule<'lean, 'lib>>::exported_unchecked` is unsafe and requires unsafe block
  --> tests/compile_fail/exported_unchecked_requires_unsafe.rs:16:21
   |
16 |     let _exported = module.exported_unchecked::<(), LeanIo<u64>>("f");
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior
